--- a/components/filmSelection/style.scss
+++ b/components/filmSelection/style.scss
@@ -1,39 +1,9 @@
-.project-container{
-  display:flex;
-  align-items:flex-start;
-  flex-direction: column;
-  width:25%;
-  margin-bottom: 3em;
-}
-.picture-container{
-  width:250px;
-  height:250px;
-  color:black;
-  opacity:1;
-  position:relative;
-  overflow:hidden;
-  margin-bottom:1em;
-  text-align:left;
-}
-
-.text{
-  color:black;
-  font-size:20pt;
-  font-family:Moon-Light;
-  letter-spacing:.1em;
-  text-align:center;
+.film-container{
   width:100%;
+  display:flex;
+  justify-content: space-around;
+  flex-wrap: wrap
 }
-.image{
-  max-width: 100%;
-  -moz-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  &:hover{
-      opacity:.4;
-      filter:blur(2px);
-      -moz-transform: scale(1.1);
-      -webkit-transform: scale(1.1);
-      transform: scale(1.1);
-  }
+.w-100{
+  width:100%;
 }
