--- a/components/content/aboutContent/style.scss
+++ b/components/content/aboutContent/style.scss
@@ -6,6 +6,7 @@
   margin-top: 6rem;
   padding-bottom:4rem;
   align-content: flex-start;
+  font-family: Raleway-Regular;
 }
 .content-container{
   display:flex;
@@ -13,4 +14,5 @@
   justify-content: flex-start;
   width: 60%;
   padding-top:4rem;
+  font-family: Raleway-Regular;
 }
