--- a/components/content/artistsContent/style.scss
+++ b/components/content/artistsContent/style.scss
@@ -7,9 +7,26 @@
   margin-top: 6rem;
   padding-bottom:4rem;
 }
-.content-container{
+.artsits-content-container{
   display:flex;
   flex-direction:column;
   justify-content: flex-start;
-  width: 65%;
+  align-items: center;
+}
+.artists-icon-container{
+  width:100%;
+  justify-content: center;
+  display: flex;
+  font-size:50pt;
+  padding:4rem;
+  background-color:yellow;
+}
+.artists-icon{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin:2rem;
+}
+.w-65{
+  width:65%;
 }
