--- a/components/content/homeContent/style.scss
+++ b/components/content/homeContent/style.scss
@@ -55,5 +55,9 @@
   display:flex;
   justify-content: center;
   align-items: center;
+  text-align: justify;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:14pt;
+  line-height: 2rem;
   margin: 2rem;
 }
