--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -73,3 +73,121 @@ body{
   animation-name: fadeInUp;
   -webkit-animation-name: fadeInUp;
 }
+
+@keyframes fadeInDown {
+  from {
+      opacity: 0;
+      transform: translate3d(0,-100px,0)
+  }
+  to {
+      transform: translate3d(0,0,0);
+      opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeInDown {
+  from {
+      opacity: 0;
+      transform: translate3d(0,-100px,0);
+  }
+  to {
+      transform: translate3d(0,0,0);
+      opacity: 1;
+  }
+}
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-fill-mode: both
+}
+
+.animatedFadeInDown {
+  opacity: 0
+}
+
+.fadeInDown {
+  opacity: 0;
+  animation-name: fadeInDown;
+  -webkit-animation-name: fadeInDown;
+}
+
+///
+@keyframes fadeInLeft {
+  from {
+      opacity: 0;
+      transform: translate3d(-150px,0,0)
+  }
+  to {
+      transform: translate3d(0,0,0);
+      opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeInLeft {
+  from {
+      opacity: 0;
+      transform: translate3d(-150px,0,0);
+  }
+  to {
+      transform: translate3d(0,0,0);
+      opacity: 1;
+  }
+}
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-fill-mode: both
+}
+
+.animatedFadeInLeft {
+  opacity: 0
+}
+
+.fadeInLeft {
+  opacity: 0;
+  animation-name: fadeInLeft;
+  -webkit-animation-name: fadeInLeft;
+}
+///
+@keyframes fadeInRight {
+  from {
+      opacity: 0;
+      transform: translate3d(150px,0,0)
+  }
+  to {
+      transform: translate3d(0,0,0);
+      opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeInRight {
+  from {
+      opacity: 0;
+      transform: translate3d(150px, 0, 0);
+  }
+  to {
+      transform: translate3d(0,0,0);
+      opacity: 1;
+  }
+}
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-fill-mode: both
+}
+
+.animatedFadeInRight {
+  opacity: 0
+}
+
+.fadeInRight {
+  opacity: 0;
+  animation-name: fadeInRight;
+  -webkit-animation-name: fadeInRight;
+}
