--- a/components/content/homeContent/style.scss
+++ b/components/content/homeContent/style.scss
@@ -51,13 +51,12 @@
 }
 .des{
   width:50%;
-  text-align:center;
   display:flex;
   justify-content: center;
   align-items: center;
   text-align: justify;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size:14pt;
+  font-family: Raleway-Regular;
+  font-size:16pt;
   line-height: 2rem;
-  margin: 2rem;
+  margin: 8rem;
 }
