--- a/components/description/style.scss
+++ b/components/description/style.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  margin:2rem 0 5rem 0;
 }
 .description-title{
   font-family:helvetica;
