--- a/components/navbar/navbar.scss
+++ b/components/navbar/navbar.scss
@@ -4,8 +4,13 @@
   top:0;
   display:flex;
   align-items: center;
+  flex-wrap: wrap;
   font-family: Moon-Light;
   letter-spacing: .1rem;
+  font-size:14pt;
+}
+.padding-top-1{
+  padding-top: 1rem;
 }
 .flex{
   display:flex
@@ -59,11 +64,17 @@
   border-bottom: 1px black solid;
 }
 a {
-  font-size: 12pt;
+  font-size: 14pt;
   text-decoration: none;
   color: silver;
   &:hover{
     color: yellow;
+  }
+}
+
+a {
+  .mobile-nav {
+  font-size:9pt;
   }
 }
 .z-index{
