added media queries for some pages

--- a/components/navbar/navbar.scss
+++ b/components/navbar/navbar.scss
@@ -18,6 +18,9 @@
 .direction-column{
   flex-direction: column;
 }
+.direction-row{
+  flex-direction:row;
+}
 .justify-center{
   justify-content: center;
 }
