--- a/components/quote/style.scss
+++ b/components/quote/style.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   font-size: 20pt;
-  font-family: Moon-Light;
+  font-family: Raleway-Regular;
   letter-spacing: .1rem;
 }
 .quote-content{
