--- a/components/IconDisplay/style.scss
+++ b/components/IconDisplay/style.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   font-size:40pt;
   padding: 4rem 0 4rem 0;
-  background-color:lightblue;
+  background-color:white;
 }
 .icon{
   display: flex;
